--- a/style/index.css
+++ b/style/index.css
@@ -1,8 +1,3 @@
-@font-face {
-    font-family: "Terminus";
-    src: url("./../fonts/TerminusTTF-4.49.3.ttf");
-}
-
 html {
     background-attachment: fixed;
     background-color: #039898;
@@ -12,21 +7,12 @@ html {
 }
 
 body {
-    background-color: #000;
-    color: #fff;
-    font-family: "Terminus", sans-serif;
-    font-weight: bold;
     margin-top: 10px;
     margin-right: auto;
     margin-left: auto;
-    padding: 8px;
-    border: 5px ridge #ff43f2;
     display: grid;
     vertical-align: middle;
-}
-
-a {
-    color: #fff;
+    gap: 15px;
 }
 
 header {
@@ -62,19 +48,27 @@ h1 {
     }
 }
 
-#about {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+.window {
+    margin: 8px auto;
+    max-width: calc(88px * 8 + 8px * 7 + 4px);
+    float: initial;
+}
+
+@media screen and (max-width: calc(88px * 8 + 8px * 7 + 4px)) {
+    .window {
+        margin: 8px;
+    }
 }
 
 #about table {
     margin-bottom: 15px;
-    margin-left: auto;
-    margin-right: auto;
 }
 
 #btns {
+    max-width: calc(88px * 8 + 8px * 7 + 4px);
+}
+
+#btns .window-body {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -82,29 +76,26 @@ h1 {
     justify-content: center;
     margin-bottom: 15px;
     margin-top: 15px;
-    max-width: calc(88px * 8 + 8px * 7 + 4px);
 }
 
-#my-btn a {
-    display: block;
-    width: fit-content;
-    border: 1px solid #fff;
-}
+#my-btn {
+    a {
+        display: block;
+        margin-bottom: 8px;
+        margin-top: 8px;
+    }
 
-#my-btn-embed-code {
-    max-width: calc(100% - 2ch - 1px);
-    padding: 1ch;
-    resize: both;
-    overflow: auto;
-    background-color: #2c2163;
-    color: #fff;
-    border: 3px ridge #7256ff;
-    margin-bottom: 15px;
-    margin-top: 15px;
-}
+    .tree-view {
+        margin-bottom: 8px;
+    }
 
-ul {
-    list-style-type: square;
+    button {
+        position: relative;
+        justify-self: right;
+        float: right;
+        margin-bottom: 8px;
+        font-weight: revert;
+    }
 }
 
 #penguins img {
