--- a/style/index.css
+++ b/style/index.css
@@ -321,4 +321,5 @@ body:has(#menu-popup .links div:hover) #menu-popup .title {
 #license {
     margin-top: 15px;
     color: #fff;
+    font-family: "Pixelated MS Sans Serif", serif;
 }
